--- a/src/main/resources/webapp/backend/package.json
+++ b/src/main/resources/webapp/backend/package.json
@@ -10,24 +10,28 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "@vueuse/core": "^14.1.0",
+    "axios": "^1.13.5",
     "core-js": "^3.8.3",
     "element-plus": "^2.13.0",
-    "vue": "^3.2.13",
-    "vue-i18n": "^11.2.7"
+    "pinia": "^3.0.4",
+    "vue": "^3.5.0",
+    "vue-i18n": "^11.2.7",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@babel/eslint-parser": "^7.28.6",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.33.0"
   },
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "vue/setup-compiler-macros": true
     },
     "extends": [
       "plugin:vue/vue3-essential",
