--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <java.version>1.8</java.version>
         <spring.boot.version>2.5.4</spring.boot.version> <!-- Match Spring Boot version -->
         <spring.security.version>5.5.1</spring.security.version> <!-- Spring Security version -->
+        <mybatis-plus.version>2.2.0</mybatis-plus.version>
     </properties>
 
     <!-- Dependencies -->
@@ -45,6 +46,8 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+
+
         <!-- Spring Boot DevTools (for development) -->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
@@ -65,13 +68,17 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis-plus.version}</version>
+        </dependency>
 
-        <!-- Test Dependencies -->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-test</artifactId>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
 
 
     </dependencies>
