--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,21 @@
 
     <!-- Build Configuration -->
     <build>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>application*.yml</include>
+                    <include>application*.properties</include>
+                    <include>mapper/**</include>
+
+                    <include>webapp/backend/dist/**</include>
+                    <include>webapp/front/dist/**</include>
+                </includes>
+            </resource>
+        </resources>
+
         <plugins>
             <!-- Spring Boot Maven Plugin (for packaging and running Spring Boot applications) -->
             <plugin>
@@ -92,6 +107,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+
     </build>
 
 </project>
